# kindly

./: .gitignore  Makefile  Pipfile  README.md  setup.cfg  setup.py  tox.ini
kindly/: __init__.py  config.py  driver.py  orchestrator.py  packager.py  shell.py  spec.py  util.py
kindly/cmd/: __init__.py  apply.py  create.py  delete.py  get.py
test/: conftest.py  test_config.py  test_driver.py  test_orchestrator.py  test_packager.py  test_spec.py  test_util.py
test/resources/: Dockerfile  Makefile  kindly.yml
test/resources/charts/foo/: Chart.yaml  values.yaml
test/resources/charts/foo/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  serviceaccount.yaml
test/resources/configs/: deployment.yaml  service.yaml
