[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = kindly
summary = kindly - Kind lifecycle manager.
description-file = README.md
author = John Dewey
author-email = john@dewey.ws
home-page = https://github.com/retr0h/kindly
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    click
    click-completion
    colorama
    halo
    plumbum
    PyYAML

[options.extras_require]
# These are required during test:
test =
    black==19.10b0
    flake8
    hacking
    pep517
    pyfakefs
    pytest
    pytest-cov
    pytest-mock
    tox
    twine

[options.entry_points]
console_scripts =
    kindly = kindly.shell:main

[options.packages.find]
where = .
